implemented all methods
